# serializer version: 1
# name: test_help_for_stdlib_function[asyncio]
  '''
  Function: lib.strings.splitString
  Description: Cut a string with a separator and produces a list of strings which
  were separated by this separator.
  Categories: lib, strings
  Source: https://github.com/nixos/nixpkgs/tree/a338f62ea8defe7b0946f9718204c29105524b35/lib/strings.nix#L1705:C3
  Aliases: lib.splitString
  '''
# ---
# name: test_help_for_stdlib_function_not_found[asyncio]
  "Error: Function 'lib.nonexistent.xyz123' not found on Noogle"
# ---
# name: test_invalid_project[asyncio]
  "Error: Invalid project 'invalid-project'. Available: nixos, homemanager, nixvim, nix-darwin, impermanence, microvm, simple-nixos-mailserver, sops-nix, nixos-hardware, disko, nix-nomad"
# ---
# name: test_list_tools[asyncio]
  list([
    'find_nixpkgs_commit_with_package_version',
    'help_for_stdlib_function',
    'list_versions',
    'read_derivation',
    'read_option_declaration',
    'search_nix_stdlib',
    'search_nixpkgs',
    'search_options',
    'show_option_details',
  ])
# ---
# name: test_list_versions_homemanager[asyncio]
  '''
  homemanager versions:
  • unstable
  
  • 25.11 (stable) (default)
  
  • 25.05
  
  • 24.11
  
  • 24.05
  
  • 23.11
  
  • 23.05
  
  • 22.11
  '''
# ---
# name: test_list_versions_latest_only[asyncio]
  '''
  nixvim versions:
  • latest (default)
  '''
# ---
# name: test_list_versions_nixos[asyncio]
  '''
  nixos versions:
  • 25.11 (nixos-25.11) (default)
  
  • unstable (nixos-unstable)
  '''
# ---
# name: test_nixhub_get_commit[asyncio]
  '''
  Package: nodejs
  Version: 20.11.0
  Attribute: nodejs_20
  Commit: 10b813040df67c4039086db0f6eaf65c536886c6
  '''
# ---
# name: test_nixhub_package_not_found[asyncio]
  'Error: Request failed (500): https://www.nixhub.io/packages/nonexistent-package-xyz123?_data=routes/_nixhub.packages.$pkg._index'
# ---
# name: test_read_derivation[asyncio]
  '''
  Reference: https://github.com/NixOS/nixpkgs/blob/nixos-25.11/pkgs/by-name/ri/ripgrep/package.nix
  Source: 78 lines
  
  {
    lib,
    stdenv,
    buildPackages,
    fetchFromGitHub,
    rustPlatform,
    installShellFiles,
    pkg-config,
    withPCRE2 ? true,
    pcre2,
    writableTmpDirAsHomeHook,
  }:
  
  let
    canRunRg = stdenv.hostPlatform.emulatorAvailable buildPackages;
    rg = "${stdenv.hostPlatform.emulator buildPackages} $out/bin/rg${stdenv.hostPlatform.extensions.executable}";
  in
  rustPlatform.buildRustPackage rec {
    pname = "ripgrep";
    version = "15.1.0";
  
    src = fetchFromGitHub {
      owner = "BurntSushi";
      repo = "ripgrep";
      rev = version;
      hash = "sha256-0gjwYMUlXYnmIWQS1SVzF1yQw1lpveRLw5qp049lc3I=";
    };
  
    cargoHash = "sha256-ry3pLuYNwX776Dpj9IE2+uc7eEa5+sQvdNNeG1eJecs=";
  
    nativeBuildInputs = [
      installShellFiles
      writableTmpDirAsHomeHook # required for wine when cross-compiling to Windows
    ]
    ++ lib.optional withPCRE2 pkg-config;
    buildInputs = lib.optional withPCRE2 pcre2;
  
    buildFeatures = lib.optional withPCRE2 "pcre2";
  
    postFixup = lib.optionalString canRunRg ''
      ${rg} --generate man > rg.1
      installManPage rg.1
  
      installShellCompletion --cmd rg \
        --bash <(${rg} --generate complete-bash) \
        --fish <(${rg} --generate complete-fish) \
        --zsh <(${rg} --generate complete-zsh)
    '';
  
    doInstallCheck = true;
    installCheckPhase = ''
      file="$(mktemp)"
      echo "abc\nbcd\ncde" > "$file"
      ${rg} -N 'bcd' "$file"
      ${rg} -N 'cd' "$file"
    ''
    + lib.optionalString withPCRE2 ''
      echo '(a(aa)aa)' | ${rg} -P '\((a*|(?R))*\)'
    '';
  
    meta = {
      description = "Utility that combines the usability of The Silver Searcher with the raw speed of grep";
      homepage = "https://github.com/BurntSushi/ripgrep";
      changelog = "https://github.com/BurntSushi/ripgrep/releases/tag/${version}";
      license = with lib.licenses; [
        unlicense # or
        mit
      ];
      maintainers = with lib.maintainers; [
        globin
        ma27
        zowoq
      ];
      mainProgram = "rg";
      platforms = lib.platforms.all;
    };
  }
  
  '''
# ---
# name: test_read_option_declaration_homemanager[asyncio]
  '''
  Note: Version '25.11' not found, using 'unstable' instead.
  
  Reference: https://github.com/nix-community/home-manager/blob/master/modules/programs/git.nix
  Source: 605 lines
  
  {
    config,
    lib,
    pkgs,
    ...
  }:
  let
    inherit (lib)
      concatStringsSep
      literalExpression
      mkDefault
      mkEnableOption
      mkIf
      mkOption
      mkOptionDefault
      types
      ;
  
    cfg = config.programs.git;
  in
  {
    meta.maintainers = with lib.maintainers; [
      khaneliman
      rycee
    ];
  
    options =
      let
        gitIniType =
          with types;
          let
            primitiveType = either str (either bool int);
            multipleType = either primitiveType (listOf primitiveType);
            sectionType = attrsOf multipleType;
            supersectionType = attrsOf (either multipleType sectionType);
          in
          attrsOf supersectionType;
      in
      {
        programs.git = {
          enable = mkEnableOption "Git";
  
          package = lib.mkPackageOption pkgs "git" {
            nullable = true;
            example = "pkgs.gitFull";
            extraDescription = ''
              Use {var}`pkgs.gitFull`
              to gain access to {command}`git send-email` for instance.
            '';
          };
  
          signing = {
            key = mkOption {
              type = types.nullOr types.str;
              default = null;
              description = ''
                The default signing key fingerprint.
  
                Set to `null` to let the signer decide what signing key
                to use depending on commit’s author.
              '';
            };
  
            format = mkOption {
              type = types.nullOr (
                types.enum [
                  "openpgp"
                  "ssh"
                  "x509"
                ]
              );
              defaultText = literalExpression ''
                "openpgp" for state version < 25.05,
                undefined for state version ≥ 25.05
              '';
              description = ''
                The signing method to use when signing commits and tags.
                Valid values are `openpgp` (OpenPGP/GnuPG), `ssh` (SSH), and `x509` (X.509 certificates).
              '';
            };
  
            signByDefault = mkOption {
              type = types.nullOr types.bool;
              default = null;
              description = "Whether commits and tags should be signed by default.";
            };
  
            signer = mkOption {
              type = types.nullOr types.str;
              description = "Path to signer binary to use.";
            };
          };
  
          settings = mkOption {
            type = gitIniType;
            default = { };
            example = {
              core = {
                whitespace = "trailing-space,space-before-tab";
              };
              url."ssh://git@host".insteadOf = "otherhost";
            };
            description = ''
              Configuration written to {file}`$XDG_CONFIG_HOME/git/config`.
              See {manpage}`git-config(1)` for details.
            '';
          };
  
          hooks = mkOption {
            type = types.attrsOf types.path;
            default = { };
            example = literalExpression ''
              {
                pre-commit = ./pre-commit-script;
              }
            '';
            description = ''
              Configuration helper for Git hooks.
              See <https://git-scm.com/docs/githooks>
              for reference.
            '';
          };
  
          iniContent = mkOption {
            type = gitIniType;
            internal = true;
          };
  
          ignores = mkOption {
            type = types.listOf types.str;
            default = [ ];
            example = [
              "*~"
              "*.swp"
            ];
            description = "List of paths that should be globally ignored.";
          };
  
          attributes = mkOption {
            type = types.listOf types.str;
            default = [ ];
            example = [ "*.pdf diff=pdf" ];
            description = "List of defining attributes set globally.";
          };
  
          includes = mkOption {
            type = types.listOf (
              types.submodule (
                { config, ... }:
                {
                  options = {
                    condition = mkOption {
                      type = types.nullOr types.str;
                      default = null;
                      description = ''
                        Include this configuration only when {var}`condition`
                        matches. Allowed conditions are described in
                        {manpage}`git-config(1)`.
                      '';
                    };
  
                    path = mkOption {
                      type = with types; either str path;
                      description = "Path of the configuration file to include.";
                    };
  
                    contents = mkOption {
                      type = types.attrsOf types.anything;
                      default = { };
                      example = literalExpression ''
                        {
                          user = {
                            email = "bob@work.example.com";
                            name = "Bob Work";
                            signingKey = "1A2B3C4D5E6F7G8H";
                          };
                          commit = {
                            gpgSign = true;
                          };
                        };
                      '';
                      description = ''
                        Configuration to include. If empty then a path must be given.
  
                        This follows the configuration structure as described in
                        {manpage}`git-config(1)`.
                      '';
                    };
  
                    contentSuffix = mkOption {
                      type = types.str;
                      default = "gitconfig";
                      description = ''
                        Nix store name for the git configuration text file,
                        when generating the configuration text from nix options.
                      '';
  
                    };
                  };
                  config.path = mkIf (config.contents != { }) (
                    mkDefault (
                      pkgs.writeText (lib.hm.strings.storeFileName config.contentSuffix) (
                        lib.generators.toGitINI config.contents
                      )
                    )
                  );
                }
              )
            );
            default = [ ];
            example = literalExpression ''
              [
                { path = "~/path/to/config.inc"; }
                {
                  path = "~/path/to/conditional.inc";
                  condition = "gitdir:~/src/dir";
                }
              ]
            '';
            description = "List of configuration files to include.";
          };
  
          lfs = {
            enable = mkEnableOption "Git Large File Storage";
  
            package = lib.mkPackageOption pkgs "git-lfs" { nullable = true; };
  
            skipSmudge = mkOption {
              type = types.bool;
              default = false;
              description = ''
                Skip automatic downloading of objects on clone or pull.
                This requires a manual {command}`git lfs pull`
                every time a new commit is checked out on your repository.
              '';
            };
          };
  
          maintenance = {
            enable = mkEnableOption "" // {
              description = ''
                Enable the automatic {command}`git maintenance`.
  
                If you have SSH remotes, set {option}`programs.git.package` to a
                git version with SSH support (eg: `pkgs.gitFull`).
  
                See <https://git-scm.com/docs/git-maintenance>.
              '';
            };
  
            repositories = mkOption {
              type = with types; listOf str;
              default = [ ];
              description = ''
                Repositories on which {command}`git maintenance` should run.
  
                Should be a list of absolute paths.
              '';
            };
  
            timers = mkOption {
              type = types.attrsOf types.str;
              default = {
                hourly = "*-*-* 1..23:53:00";
                daily = "Tue..Sun *-*-* 0:53:00";
                weekly = "Mon 0:53:00";
              };
              description = ''
                Systemd timers to create for scheduled {command}`git maintenance`.
  
                Key is passed to `--schedule` argument in {command}`git maintenance run`
                and value is passed to `Timer.OnCalendar` in `systemd.user.timers`.
              '';
            };
          };
        };
      };
  
    imports =
      let
        oldPrefix = [
          "programs"
          "git"
        ];
        newPrefix = [
          "programs"
          "git"
          "settings"
        ];
      in
      [
        (lib.mkRenamedOptionModule
          [ "programs" "git" "signing" "gpgPath" ]
          [
            "programs"
            "git"
            "signing"
            "signer"
          ]
        )
        (lib.mkRenamedOptionModule [ "programs" "git" "extraConfig" ] [ "programs" "git" "settings" ])
      ]
      ++ (lib.hm.deprecations.mkSettingsRenamedOptionModules oldPrefix newPrefix
        {
          transform = x: x;
        }
        [
          {
            old = [ "userName" ];
            new = [
              "user"
              "name"
            ];
          }
          {
            old = [ "userEmail" ];
            new = [
              "user"
              "email"
            ];
          }
          {
            old = [ "aliases" ];
            new = [ "alias" ];
          }
        ]
      );
  
    config = mkIf cfg.enable (
      lib.mkMerge [
        {
          home.packages = lib.optionals (cfg.package != null) [ cfg.package ];
  
          assertions = [
            {
              assertion =
                let
                  enabled = [
                    (config.programs.delta.enable && config.programs.delta.enableGitIntegration)
                    (config.programs.diff-highlight.enable && config.programs.diff-highlight.enableGitIntegration)
                    (config.programs.diff-so-fancy.enable && config.programs.diff-so-fancy.enableGitIntegration)
                    (config.programs.difftastic.enable && config.programs.difftastic.git.enable)
                    (config.programs.patdiff.enable && config.programs.patdiff.enableGitIntegration)
                    (config.programs.riff.enable && config.programs.riff.enableGitIntegration)
                  ];
                in
                lib.count lib.id enabled <= 1;
              message = "Only one of 'programs.git.delta.enable' or 'programs.git.difftastic.enable' or 'programs.git.diff-so-fancy.enable' or 'programs.git.diff-highlight' or 'programs.git.patdiff' can be set to true at the same time.";
            }
          ];
  
          xdg.configFile = {
            "git/config".text = lib.generators.toGitINI cfg.iniContent;
  
            "git/ignore" = mkIf (cfg.ignores != [ ]) {
              text = concatStringsSep "\n" cfg.ignores + "\n";
            };
  
            "git/attributes" = mkIf (cfg.attributes != [ ]) {
              text = concatStringsSep "\n" cfg.attributes + "\n";
            };
          };
        }
  
        {
          programs.git.iniContent =
            let
              hasSmtp = _name: account: account.enable && account.smtp != null;
  
              genIdentity =
                name: account:
                let
                  inherit (account)
                    address
                    realName
                    smtp
                    userName
                    ;
                in
                lib.nameValuePair "sendemail.${name}" (
                  if account.msmtp.enable then
                    {
                      sendmailCmd = "${pkgs.msmtp}/bin/msmtp";
                      envelopeSender = "auto";
                      from = "${realName} <${address}>";
                    }
                  else
                    {
                      smtpEncryption =
                        if smtp.tls.enable then
                          (if smtp.tls.useStartTls || lib.versionOlder config.home.stateVersion "20.09" then "tls" else "ssl")
                        else
                          "";
                      smtpSslCertPath = mkIf smtp.tls.enable (toString smtp.tls.certificatesFile);
                      smtpServer = smtp.host;
                      smtpUser = userName;
                      from = "${realName} <${address}>";
                    }
                    // lib.optionalAttrs (smtp.port != null) {
                      smtpServerPort = smtp.port;
                    }
                );
            in
            lib.mapAttrs' genIdentity (lib.filterAttrs hasSmtp config.accounts.email.accounts);
        }
  
        (mkIf (cfg.signing != { }) {
          programs.git = {
            signing = {
              format =
                if (lib.versionOlder config.home.stateVersion "25.05") then
                  (mkOptionDefault "openpgp")
                else
                  (mkOptionDefault null);
              signer =
                let
                  defaultSigners = {
                    openpgp = lib.getExe config.programs.gpg.package;
                    ssh = lib.getExe' pkgs.openssh "ssh-keygen";
                    x509 = lib.getExe' config.programs.gpg.package "gpgsm";
                  };
                in
                mkIf (cfg.signing.format != null) (mkOptionDefault defaultSigners.${cfg.signing.format});
            };
  
            iniContent = lib.mkMerge [
              (mkIf (cfg.signing.key != null) {
                user.signingKey = mkDefault cfg.signing.key;
              })
              (mkIf (cfg.signing.signByDefault != null) {
                commit.gpgSign = mkDefault cfg.signing.signByDefault;
                tag.gpgSign = mkDefault cfg.signing.signByDefault;
              })
              (mkIf (cfg.signing.format != null) {
                gpg = {
                  format = mkDefault cfg.signing.format;
                  ${cfg.signing.format}.program = mkDefault cfg.signing.signer;
                };
              })
            ];
          };
        })
  
        (mkIf (cfg.hooks != { }) {
          programs.git.iniContent = {
            core.hooksPath =
              let
                entries = lib.mapAttrsToList (name: path: { inherit name path; }) cfg.hooks;
              in
              toString (pkgs.linkFarm "git-hooks" entries);
          };
        })
  
        (mkIf (cfg.settings != { }) {
          programs.git.iniContent = cfg.settings;
        })
  
        (mkIf (cfg.includes != [ ]) {
          xdg.configFile."git/config".text =
            let
              include =
                i:
                with i;
                if condition != null then
                  {
                    includeIf.${condition}.path = "${path}";
                  }
                else
                  {
                    include.path = "${path}";
                  };
            in
            lib.mkAfter (concatStringsSep "\n" (map lib.generators.toGitINI (map include cfg.includes)));
        })
  
        (mkIf cfg.lfs.enable {
          home.packages = lib.mkIf (cfg.lfs.package != null) [ cfg.lfs.package ];
  
          programs.git.iniContent.filter.lfs =
            let
              skipArg = lib.optional cfg.lfs.skipSmudge "--skip";
            in
            {
              clean = "git-lfs clean -- %f";
              process = concatStringsSep " " (
                [
                  "git-lfs"
                  "filter-process"
                ]
                ++ skipArg
              );
              required = true;
              smudge = concatStringsSep " " (
                [
                  "git-lfs"
                  "smudge"
                ]
                ++ skipArg
                ++ [
                  "--"
                  "%f"
                ]
              );
            };
        })
  
        (mkIf cfg.maintenance.enable {
          programs.git.iniContent.maintenance.repo = cfg.maintenance.repositories;
  
          systemd.user.services."git-maintenance@" = {
            Unit = {
              Description = "Optimize Git repositories data";
              Documentation = [ "man:git-maintenance(1)" ];
            };
  
            Service = {
              Type = "oneshot";
              ExecStart =
                let
                  exe = if cfg.package != null then lib.getExe cfg.package else "git";
                in
                ''
                  "${exe}" for-each-repo --keep-going --config=maintenance.repo maintenance run --schedule=%i
                '';
              LockPersonality = "yes";
              MemoryDenyWriteExecute = "yes";
              NoNewPrivileges = "yes";
              RestrictAddressFamilies = "AF_UNIX AF_INET AF_INET6 AF_VSOCK";
              RestrictNamespaces = "yes";
              RestrictRealtime = "yes";
              RestrictSUIDSGID = "yes";
              SystemCallArchitectures = "native";
              SystemCallFilter = "@system-service";
            };
          };
  
          systemd.user.timers =
            let
              toSystemdTimer =
                name: time:
                lib.attrsets.nameValuePair "git-maintenance@${name}" {
                  Unit.Description = "Optimize Git repositories data";
  
                  Timer = {
                    OnCalendar = time;
                    Persistent = true;
                  };
  
                  Install.WantedBy = [ "timers.target" ];
                };
            in
            lib.attrsets.mapAttrs' toSystemdTimer cfg.maintenance.timers;
  
          launchd.agents =
            let
              baseArguments = [
                "${if cfg.package != null then lib.getExe cfg.package else "git"}"
                "for-each-repo"
                "--keep-going"
                "--config=maintenance.repo"
                "maintenance"
                "run"
              ];
            in
            {
              "git-maintenance-hourly" = {
                enable = true;
                config = {
                  ProgramArguments = baseArguments ++ [ "--schedule=hourly" ];
                  StartCalendarInterval = map (hour: {
                    Hour = hour;
                    Minute = 53;
                  }) (lib.range 1 23);
                };
              };
              "git-maintenance-daily" = {
                enable = true;
                config = {
                  ProgramArguments = baseArguments ++ [ "--schedule=daily" ];
                  StartCalendarInterval = map (weekday: {
                    Weekday = weekday;
                    Hour = 0;
                    Minute = 53;
                  }) (lib.range 1 6);
                };
              };
              "git-maintenance-weekly" = {
                enable = true;
                config = {
                  ProgramArguments = baseArguments ++ [ "--schedule=weekly" ];
                  StartCalendarInterval = [
                    {
                      Weekday = 0;
                      Hour = 0;
                      Minute = 53;
                    }
                  ];
                };
              };
            };
        })
      ]
    );
  }
  
  '''
# ---
# name: test_read_option_declaration_nix_darwin[asyncio]
  '''
  Reference: https://github.com/nix-darwin/nix-darwin/blob/9f48ffaca1f44b3e590976b4da8666a9e86e6eb1/modules/programs/zsh/default.nix
  Source: 267 lines
  
  { config, lib, options, pkgs, ... }:
  
  with lib;
  
  let
    cfg = config.programs.zsh;
    opt = options.programs.zsh;
  
    zshVariables =
      mapAttrsToList (n: v: ''${n}="${v}"'') cfg.variables;
  
    fzfCompletion = ./fzf-completion.zsh;
    fzfGit = ./fzf-git.zsh;
    fzfHistory = ./fzf-history.zsh;
  in
  
  {
    options = {
      programs.zsh.enable = mkOption {
        type = types.bool;
        default = true;
        description = "Whether to configure zsh as an interactive shell.";
      };
  
      programs.zsh.variables = mkOption {
        type = types.attrsOf (types.either types.str (types.listOf types.str));
        default = {};
        description = ''
          A set of environment variables used in the global environment.
          These variables will be set on shell initialisation.
          The value of each variable can be either a string or a list of
          strings.  The latter is concatenated, interspersed with colon
          characters.
        '';
        apply = mapAttrs (n: v: if isList v then concatStringsSep ":" v else v);
      };
  
      programs.zsh.shellInit = mkOption {
        type = types.lines;
        default = "";
        description = "Shell script code called during zsh shell initialisation.";
      };
  
      programs.zsh.loginShellInit = mkOption {
        type = types.lines;
        default = "";
        description = "Shell script code called during zsh login shell initialisation.";
      };
  
      programs.zsh.interactiveShellInit = mkOption {
        type = types.lines;
        default = "";
        description = "Shell script code called during interactive zsh shell initialisation.";
      };
  
      programs.zsh.promptInit = mkOption {
        type = types.lines;
        default = "autoload -U promptinit && promptinit && prompt suse && setopt prompt_sp";
        description = "Shell script code used to initialise the zsh prompt.";
      };
  
      programs.zsh.histSize = mkOption {
        type = types.int;
        default = 2000;
        description = "Change history size.";
      };
  
      programs.zsh.histFile = mkOption {
        type = types.str;
        default = "$HOME/.zsh_history";
        description = "Change history file.";
      };
  
      programs.zsh.enableCompletion = mkOption {
        type = types.bool;
        default = true;
        description = "Enable zsh completion for all interactive zsh shells.";
      };
  
      programs.zsh.enableBashCompletion = mkOption {
        type = types.bool;
        default = true;
        description = "Enable bash completion for all interactive zsh shells.";
      };
  
      programs.zsh.enableGlobalCompInit = mkOption {
        type = types.bool;
        default = cfg.enableCompletion;
        defaultText = literalExpression "config.${opt.enableCompletion}";
        description = ''
          Enable execution of compinit call for all interactive zsh shells.
  
          This option can be disabled if the user wants to extend its
          `fpath` and a custom `compinit`
          call in the local config is required.
        '';
      };
  
      programs.zsh.enableFzfCompletion = mkOption {
        type = types.bool;
        default = false;
        description = "Enable fzf completion.";
      };
  
      programs.zsh.enableFzfGit = mkOption {
        type = types.bool;
        default = false;
        description = "Enable fzf keybindings for C-g git browsing.";
      };
  
      programs.zsh.enableFzfHistory = mkOption {
        type = types.bool;
        default = false;
        description = "Enable fzf keybinding for Ctrl-r history search.";
      };
  
      programs.zsh.enableAutosuggestions = mkOption {
        type = types.bool;
        default = false;
        description = "Enable zsh-autosuggestions.";
      };
  
      programs.zsh.enableSyntaxHighlighting = mkOption {
        type = types.bool;
        default = false;
        description = "Enable zsh-syntax-highlighting.";
      };
  
      programs.zsh.enableFastSyntaxHighlighting = mkEnableOption "zsh-fast-syntax-highlighting";
    };
  
    config = mkIf cfg.enable {
  
      assertions = [
        {
          assertion = !(cfg.enableSyntaxHighlighting && cfg.enableFastSyntaxHighlighting);
          message = "zsh-syntax-highlighting and zsh-fast-syntax-highlighting are mutually exclusive, please disable one of them.";
        }
      ];
      environment.systemPackages =
        [ # Include zsh package
          pkgs.zsh
        ] ++ optional cfg.enableCompletion pkgs.nix-zsh-completions
          ++ optional cfg.enableAutosuggestions pkgs.zsh-autosuggestions
          ++ optional cfg.enableSyntaxHighlighting pkgs.zsh-syntax-highlighting
          ++ optional cfg.enableFastSyntaxHighlighting pkgs.zsh-fast-syntax-highlighting;
  
      environment.pathsToLink = [ "/share/zsh" ];
  
      environment.etc."zshenv".text = ''
        # /etc/zshenv: DO NOT EDIT -- this file has been generated automatically.
        # This file is read for all shells.
  
        # Only execute this file once per shell.
        if [ -n "''${__ETC_ZSHENV_SOURCED-}" ]; then return; fi
        __ETC_ZSHENV_SOURCED=1
  
        if [[ -o rcs ]]; then
          if [ -z "''${__NIX_DARWIN_SET_ENVIRONMENT_DONE-}" ]; then
            . ${config.system.build.setEnvironment}
          fi
  
          # Tell zsh how to find installed completions
          for p in ''${(z)NIX_PROFILES}; do
            fpath=($p/share/zsh/site-functions $p/share/zsh/$ZSH_VERSION/functions $p/share/zsh/vendor-completions $fpath)
          done
  
          ${cfg.shellInit}
        fi
  
        # Read system-wide modifications.
        if test -f /etc/zshenv.local; then
          source /etc/zshenv.local
        fi
      '';
  
      environment.etc."zprofile".text = ''
        # /etc/zprofile: DO NOT EDIT -- this file has been generated automatically.
        # This file is read for login shells.
  
        # Only execute this file once per shell.
        if [ -n "''${__ETC_ZPROFILE_SOURCED-}" ]; then return; fi
        __ETC_ZPROFILE_SOURCED=1
  
        ${concatStringsSep "\n" zshVariables}
        ${config.system.build.setAliases.text}
  
        ${cfg.loginShellInit}
  
        # Read system-wide modifications.
        if test -f /etc/zprofile.local; then
          source /etc/zprofile.local
        fi
      '';
  
      environment.etc."zshrc".text = ''
        # /etc/zshrc: DO NOT EDIT -- this file has been generated automatically.
        # This file is read for interactive shells.
  
        # Only execute this file once per shell.
        if [ -n "$__ETC_ZSHRC_SOURCED" -o -n "$NOSYSZSHRC" ]; then return; fi
        __ETC_ZSHRC_SOURCED=1
  
        # Setup command line history.
        # Don't export these, otherwise other shells (bash) will try to use same HISTFILE.
        SAVEHIST=${builtins.toString cfg.histSize}
        HISTSIZE=${builtins.toString cfg.histSize}
        HISTFILE=${cfg.histFile}
  
        setopt HIST_IGNORE_DUPS SHARE_HISTORY HIST_FCNTL_LOCK
  
        bindkey -e
  
        ${config.environment.interactiveShellInit}
        ${cfg.interactiveShellInit}
  
        ${cfg.promptInit}
  
        ${optionalString cfg.enableGlobalCompInit "autoload -U compinit && compinit"}
        ${optionalString cfg.enableBashCompletion "autoload -U bashcompinit && bashcompinit"}
  
        ${optionalString cfg.enableAutosuggestions
          "source ${pkgs.zsh-autosuggestions}/share/zsh-autosuggestions/zsh-autosuggestions.zsh"
        }
  
        ${optionalString cfg.enableSyntaxHighlighting
          "source ${pkgs.zsh-syntax-highlighting}/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh"
        }
  
        ${optionalString cfg.enableFastSyntaxHighlighting
          "source ${pkgs.zsh-fast-syntax-highlighting}/share/zsh/plugins/fast-syntax-highlighting/fast-syntax-highlighting.plugin.zsh"
        }
  
        ${optionalString cfg.enableFzfCompletion "source ${fzfCompletion}"}
        ${optionalString cfg.enableFzfGit "source ${fzfGit}"}
        ${optionalString cfg.enableFzfHistory "source ${fzfHistory}"}
  
        # Read system-wide modifications.
        if test -f /etc/zshrc.local; then
          source /etc/zshrc.local
        fi
      '';
  
      environment.etc."zprofile".knownSha256Hashes = [
        "db8422f92d8cff684e418f2dcffbb98c10fe544b5e8cd588b2009c7fa89559c5"
        "0235d3c1b6cf21e7043fbc98e239ee4bc648048aafaf6be1a94a576300584ef2"  # macOS
        "f320016e2cf13573731fbee34f9fe97ba867dd2a31f24893d3120154e9306e92"  # macOS 26b1 and higher
      ];
  
      environment.etc."zshrc".knownSha256Hashes = [
        "19a2d673ffd47b8bed71c5218ff6617dfc5e8533b240b9ba79142a45f8823c23"
        "fb5827cb4712b7e7932d438067ec4852c8955a9ff0f55e282473684623ebdfa1"  # macOS
        "4d1ab5704f9d167a042fecac0d056c8a79a8ebd71e032d3489536c8db9ffe3e0"  # macOS 26b1 and higher
        "c5a00c072c920f46216454978c44df044b2ec6d03409dc492c7bdcd92c94a110"  # official Nix installer
        "40b0d8751adae5b0100a4f863be5b75613a49f62706427e92604f7e04d2e2261"  # official Nix installer
        "bf76c5ed8e65e616f4329eccf662ee91be33b8bfd33713ce9946f2fe94fea7fa"  # official Nix installer (macOS 26b1 and higher)
        "2af1b563e389d11b76a651b446e858116d7a20370d9120a7e9f78991f3e5f336"  # DeterminateSystems installer
        "27274e44b88a1174787f9a3d437d3387edc4f9aaaf40356054130797f5dc7912"  # DeterminateSystems installer (macOS 26b1 and higher)
      ];
  
      environment.etc."zshenv".knownSha256Hashes = [
        "d07015be6875f134976fce84c6c7a77b512079c1c5f9594dfa65c70b7968b65f"  # DeterminateSystems installer
      ];
  
    };
  }
  
  '''
# ---
# name: test_read_option_declaration_nix_nomad_not_supported[asyncio]
  "Error: nix-nomad options don't have readable declarations. They are auto-generated from external specifications (Nomad HCL)."
# ---
# name: test_read_option_declaration_nixos[asyncio]
  '''
  Reference: https://github.com/NixOS/nixpkgs/blob/nixos-25.11/nixos/modules/config/locale.nix
  Source: 103 lines
  
  {
    config,
    lib,
    pkgs,
    ...
  }:
  let
  
    tzdir = "${pkgs.tzdata}/share/zoneinfo";
    nospace = str: lib.filter (c: c == " ") (lib.stringToCharacters str) == [ ];
    timezone = lib.types.nullOr (lib.types.addCheck lib.types.str nospace) // {
      description = "null or string without spaces";
    };
  
    lcfg = config.location;
  
  in
  
  {
    options = {
  
      time = {
  
        timeZone = lib.mkOption {
          default = null;
          type = timezone;
          example = "America/New_York";
          description = ''
            The time zone used when displaying times and dates. See <https://en.wikipedia.org/wiki/List_of_tz_database_time_zones>
            for a comprehensive list of possible values for this setting.
  
            If null, the timezone will default to UTC and can be set imperatively
            using timedatectl.
          '';
        };
  
        hardwareClockInLocalTime = lib.mkOption {
          default = false;
          type = lib.types.bool;
          description = "If set, keep the hardware clock in local time instead of UTC.";
        };
  
      };
  
      location = {
  
        latitude = lib.mkOption {
          type = lib.types.float;
          description = ''
            Your current latitude, between
            `-90.0` and `90.0`. Must be provided
            along with longitude.
          '';
        };
  
        longitude = lib.mkOption {
          type = lib.types.float;
          description = ''
            Your current longitude, between
            between `-180.0` and `180.0`. Must be
            provided along with latitude.
          '';
        };
  
        provider = lib.mkOption {
          type = lib.types.enum [
            "manual"
            "geoclue2"
          ];
          default = "manual";
          description = ''
            The location provider to use for determining your location. If set to
            `manual` you must also provide latitude/longitude.
          '';
        };
  
      };
    };
  
    config = {
  
      environment.sessionVariables.TZDIR = "/etc/zoneinfo";
  
      services.geoclue2.enable = lib.mkIf (lcfg.provider == "geoclue2") true;
  
      # This way services are restarted when tzdata changes.
      systemd.globalEnvironment.TZDIR = tzdir;
  
      systemd.services.systemd-timedated.environment = lib.optionalAttrs (config.time.timeZone != null) {
        NIXOS_STATIC_TIMEZONE = "1";
      };
  
      environment.etc = {
        zoneinfo.source = tzdir;
      }
      // lib.optionalAttrs (config.time.timeZone != null) {
        localtime.source = "/etc/zoneinfo/${config.time.timeZone}";
        localtime.mode = "direct-symlink";
      };
    };
  
  }
  
  '''
# ---
# name: test_read_option_declaration_nixvim[asyncio]
  '''
  Reference: https://github.com/nix-community/nixvim/blob/main/modules/colorscheme.nix
  Source: 17 lines
  
  { config, lib, ... }:
  {
    options = {
      colorscheme = lib.mkOption {
        type = lib.types.nullOr lib.types.str;
        description = "The name of the colorscheme to use";
        default = null;
      };
    };
  
    config = lib.mkIf (config.colorscheme != "" && config.colorscheme != null) {
      extraConfigVim = ''
        colorscheme ${config.colorscheme}
      '';
    };
  }
  
  '''
# ---
# name: test_search_nix_stdlib[asyncio]
  '''
  Showing 20 of 83 functions:
  • lib.textClosureMap
    textClosureMap. lib.textClosureMap.
  
  • lib.stringsWithDeps.textClosureMap
    textClosureMap. lib.stringsWithDeps.textClosureMap.
  
  • builtins.map
    map. builtins.map. Primop. Takes 2 arguments. f, list. Apply the function f to each element in the list list. For exa...
  
  • lib.map
    map. lib.map. Primop. Takes 2 arguments. f, list. Apply the function f to each element in the list list. For example,...
  
  • lib.lists.map
    map. lib.lists.map. Primop. Takes 2 arguments. f, list. Apply the function f to each element in the list list. For ex...
  
  • pkgs.testers.testEqualArrayOrMap
    testEqualArrayOrMap. pkgs.testers.testEqualArrayOrMap. Functor.
  
  • pkgs.testers.testEqualArrayOrMap.overrideDerivation
    overrideDerivation. pkgs.testers.testEqualArrayOrMap.overrideDerivation.
  
  • builtins.concatMap
    concatMap. builtins.concatMap. Primop. Takes 2 arguments. f, list. Map and concatenate the result. Type. concatMap ::...
  
  • lib.concatMap
    concatMap. lib.concatMap. Primop. Takes 2 arguments. f, list. Map and concatenate the result. Type. concatMap :: (a -...
  
  • lib.mapAttrsRecursiveCond
    mapAttrsRecursiveCond. lib.mapAttrsRecursiveCond. Like mapAttrsRecursive, but it takes an additional predicate that t...
  
  • pkgs.testers.testEqualArrayOrMap.override
    override. pkgs.testers.testEqualArrayOrMap.override. Functor.
  
  • lib.attrsets.mapAttrsRecursiveCond
    mapAttrsRecursiveCond. lib.attrsets.mapAttrsRecursiveCond. Like mapAttrsRecursive, but it takes an additional predica...
  
  • lib.lists.concatMap
    concatMap. lib.lists.concatMap. Primop. Takes 2 arguments. f, list. Map and concatenate the result. Type. concatMap :...
  
  • lib.mapAttrsRecursive
    mapAttrsRecursive. lib.mapAttrsRecursive. Like mapAttrs, except that it recursively applies itself to the leaf attrib...
  
  • lib.attrsets.mapAttrsRecursive
    mapAttrsRecursive. lib.attrsets.mapAttrsRecursive. Like mapAttrs, except that it recursively applies itself to the le...
  
  • lib.mapNullable
    mapNullable. lib.mapNullable. Apply function if the supplied argument is non-null. Inputs. f Function to call. a Argu...
  
  • lib.mapDerivationAttrset
    mapDerivationAttrset. lib.mapDerivationAttrset. Apply a function to each derivation and only to derivations in an att...
  
  • lib.concatMapStrings
    concatMapStrings. lib.concatMapStrings. Map a function over a list and concatenate the resulting strings. Inputs. f 1...
  
  • lib.trivial.mapNullable
    mapNullable. lib.trivial.mapNullable. Apply function if the supplied argument is non-null. Inputs. f Function to call...
  
  • lib.strings.concatMapStrings
    concatMapStrings. lib.strings.concatMapStrings. Map a function over a list and concatenate the resulting strings. Inp...
  '''
# ---
# name: test_search_options_homemanager[asyncio]
  '''
  Note: Version '25.11' not found, using 'unstable' instead.
  
  Showing 20 of 36 options:
  • programs.git.enable
    Type: boolean
    Whether to enable Git.
  
  • programs.eza.git
    Type: boolean
    List each file's Git status if tracked or ignored ({option}`--git` argument).
  
  • programs.difftastic.git.diffToolMode
    Type: boolean
    Whether to additionally configure difftastic as a git difftool.
  
  When `false`, only `diff.external` is set (used for ...
  
  • programs.bun.enableGitIntegration
    Type: boolean
    Whether to enable Git integration.
  
  • programs.git-cliff.package
    Type: null or package
    The git-cliff package to use.
  
  • programs.git.lfs.package
    Type: null or package
    The git-lfs package to use.
  
  • programs.kitty.enableGitIntegration
    Type: boolean
    Whether to enable git integration.
  
  • services.git-sync.package
    Type: package
    The git-sync package to use.
  
  • programs.gh.settings.git_protocol
    Type: string
    The protocol to use when performing Git operations.
  
  • programs.git-credential-keepassxc.package
    Type: package
    The git-credential-keepassxc package to use.
  
  • programs.git-credential-oauth.package
    Type: package
    The git-credential-oauth package to use.
  
  • programs.git-worktree-switcher.enable
    Type: boolean
    Whether to enable git-worktree-switcher.
  
  • programs.git-worktree-switcher.package
    Type: package
    The git-worktree-switcher package to use.
  
  • services.git-sync.enable
    Type: boolean
    Whether to enable git-sync services.
  
  • services.git-sync.repositories.<name>.extraPackages
    Type: list of package
    Extra packages available to git-sync.
  
  • programs.gh.gitCredentialHelper.enable
    Type: boolean
    Whether to enable the gh git credential helper.
  
  • programs.git-cliff.enable
    Type: boolean
    Whether to enable git-cliff changelog generator.
  
  • programs.git-credential-oauth.enable
    Type: boolean
    Whether to enable Git authentication handler for OAuth.
  
  • programs.git.lfs.enable
    Type: boolean
    Whether to enable Git Large File Storage.
  
  • programs.delta.enable
    Type: boolean
    Whether to enable delta, a syntax highlighter for git diffs.
  '''
# ---
# name: test_search_options_nix_nomad[asyncio]
  '''
  Showing 20 of 804 options:
  • job
    Type: attribute set of (submodule)
    An attrset of Nomad jobs, where attrset keys are the job name.
  
  • job.<name>.affinities
    Type: null or (list of (submodule))
  
  • job.<name>.affinities.*.attribute
    Type: null or string
  
  • job.<name>.affinities.*.operator
    Type: null or string
  
  • job.<name>.affinities.*.value
    Type: null or string
  
  • job.<name>.affinities.*.weight
    Type: null or signed integer
  
  • job.<name>.allAtOnce
    Type: null or boolean
  
  • job.<name>.constraints
    Type: null or (list of (submodule))
  
  • job.<name>.constraints.*.attribute
    Type: null or string
  
  • job.<name>.constraints.*.operator
    Type: null or string
  
  • job.<name>.constraints.*.value
    Type: null or string
  
  • job.<name>.datacenters
    Type: null or (list of string)
  
  • job.<name>.group
    Type: null or (attribute set of (submodule))
  
  • job.<name>.group.<name>.affinities
    Type: null or (list of (submodule))
  
  • job.<name>.group.<name>.affinities.*.attribute
    Type: null or string
  
  • job.<name>.group.<name>.affinities.*.operator
    Type: null or string
  
  • job.<name>.group.<name>.affinities.*.value
    Type: null or string
  
  • job.<name>.group.<name>.affinities.*.weight
    Type: null or signed integer
  
  • job.<name>.group.<name>.constraints
    Type: null or (list of (submodule))
  
  • job.<name>.group.<name>.constraints.*.attribute
    Type: null or string
  '''
# ---
# name: test_search_options_nixos[asyncio]
  '''
  Found 1 options:
  • time.timeZone
    Type: null or string without spaces
    The time zone used when displaying times and dates. See  https://en.wikipedia.org/wiki/List_of_tz_database_time_zones...
  '''
# ---
# name: test_search_options_nixvim[asyncio]
  '''
  Found 20 options:
  • colorscheme
    Type: null or string
    The name of the colorscheme to use
  
  • colorschemes.ayu.autoLoad
    Type: boolean
    Whether to automatically load ayu when neovim starts.
  
  • colorschemes.ayu.enable
    Type: boolean
    Whether to enable ayu.
  
  • colorschemes.ayu.lazyLoad
    Type: submodule
    Lazy-load settings for ayu. 
   
   [!WARNING]
  This is an experimental option and may not work as expected with all plugi...
  
  • colorschemes.ayu.lazyLoad.enable
    Type: unspecified value
    lazy-loading for ayu
  
  • colorschemes.ayu.lazyLoad.settings
    Type: lua value
    Lazy provider configuration settings. 
   Check your lazy loading provider's documentation on settings to configure.
  
  • colorschemes.ayu.luaConfig
    Type: submodule
    The plugin's lua configuration
  
  • colorschemes.ayu.luaConfig.content
    Type: strings concatenated with "\n"
    Configuration of the plugin. 
   If  pre  and/or  post  are non-null, they will be merged using the order priorities
  30...
  
  • colorschemes.ayu.luaConfig.post
    Type: null or strings concatenated with "\n"
    Lua code inserted at the end of the plugin's configuration.
  This is the same as using  lib.nixvim.utils.mkAfterSectio...
  
  • colorschemes.ayu.luaConfig.pre
    Type: null or strings concatenated with "\n"
    Lua code inserted at the start of the plugin's configuration.
  This is the same as using  lib.nixvim.utils.mkBeforeSec...
  
  • colorschemes.ayu.package
    Type: package
    The ayu package to use.
  
  • colorschemes.ayu.settings
    Type: open submodule of attribute set of lua value
    Options provided to the  require('ayu').setup  function.
  
  • colorschemes.ayu.settings.mirage
    Type: null or boolean or raw lua code
    Set to  true  to use  mirage  variant instead of  dark  for dark background.
  
  • colorschemes.ayu.settings.overrides
    Type: null or lua code string or attribute set of (open submodule of (attribute set))
    A dictionary of group names, each associated with a dictionary of parameters
  ( bg ,  fg ,  sp  and  style ) and color...
  
  • colorschemes.bamboo.autoLoad
    Type: boolean
    Whether to automatically load bamboo when neovim starts.
  
  • colorschemes.bamboo.enable
    Type: boolean
    Whether to enable bamboo.
  
  • colorschemes.bamboo.lazyLoad
    Type: submodule
    Lazy-load settings for bamboo. 
   
   [!WARNING]
  This is an experimental option and may not work as expected with all pl...
  
  • colorschemes.bamboo.lazyLoad.enable
    Type: unspecified value
    lazy-loading for bamboo
  
  • colorschemes.bamboo.lazyLoad.settings
    Type: lua value
    Lazy provider configuration settings. 
   Check your lazy loading provider's documentation on settings to configure.
  
  • colorschemes.bamboo.luaConfig
    Type: submodule
    The plugin's lua configuration
  '''
# ---
# name: test_search_package[asyncio]
  '''
  Found 6 packages:
  • ripgrep (15.1.0)
    Utility that combines the usability of The Silver Searcher with the raw speed of grep
  
  • vgrep (2.8.0)
    User-friendly pager for grep/git-grep/ripgrep
  
  • batgrep (2024.08.24-unstable-2025-02-22)
    Quickly search through and highlight files using ripgrep
  
  • grip-grab (0.6.7)
    Fast, more lightweight ripgrep alternative for daily use cases
  
  • ripgrep-all (0.10.10)
    Ripgrep, but also search in PDFs, E-Books, Office documents, zip, tar.gz, and more
  
  • repgrep (0.16.1)
    Interactive replacer for ripgrep that makes it easy to find and replace across files on the command line
  '''
# ---
# name: test_show_option_details_homemanager_leaf[asyncio]
  '''
  Note: Version '25.11' not found, using 'unstable' instead.
  
  Option: programs.git.enable
  Type: boolean
  Description: Whether to enable Git.
  Default: false
  Example: true
  Reference: https://github.com/nix-community/home-manager/blob/master/modules/programs/git.nix (605 lines, use read_option_declaration to read)
  '''
# ---
# name: test_show_option_details_homemanager_prefix[asyncio]
  '''
  Note: Version '25.11' not found, using 'unstable' instead.
  
  'programs.git' has 21 child options:
  • programs.git.attributes
    Type: list of string
    List of defining attributes set globally.
  
  • programs.git.enable
    Type: boolean
    Whether to enable Git.
  
  • programs.git.hooks
    Type: attribute set of absolute path
    Configuration helper for Git hooks.
  See  
  for reference.
  
  • programs.git.ignores
    Type: list of string
    List of paths that should be globally ignored.
  
  • programs.git.includes
    Type: list of (submodule)
    List of configuration files to include.
  
  • programs.git.includes.*.condition
    Type: null or string
    Include this configuration only when {var}`condition`
  matches. Allowed conditions are described in
  {manpage}`git-conf...
  
  • programs.git.includes.*.contentSuffix
    Type: string
    Nix store name for the git configuration text file,
  when generating the configuration text from nix options.
  
  • programs.git.includes.*.contents
    Type: attribute set of anything
    Configuration to include. If empty then a path must be given.
  
  This follows the configuration structure as described ...
  
  • programs.git.includes.*.path
    Type: string or absolute path
    Path of the configuration file to include.
  
  • programs.git.lfs.enable
    Type: boolean
    Whether to enable Git Large File Storage.
  
  • programs.git.lfs.package
    Type: null or package
    The git-lfs package to use.
  
  • programs.git.lfs.skipSmudge
    Type: boolean
    Skip automatic downloading of objects on clone or pull.
  This requires a manual {command}`git lfs pull`
  every time a n...
  
  • programs.git.maintenance.enable
    Type: boolean
    Enable the automatic {command}`git maintenance`.
  
  If you have SSH remotes, set {option}`programs.git.package` to a
  gi...
  
  • programs.git.maintenance.repositories
    Type: list of string
    Repositories on which {command}`git maintenance` should run.
  
  Should be a list of absolute paths.
  
  • programs.git.maintenance.timers
    Type: attribute set of string
    Systemd timers to create for scheduled {command}`git maintenance`.
  
  Key is passed to `--schedule` argument in {comman...
  
  • programs.git.package
    Type: null or package
    The git package to use. Use {var}`pkgs.gitFull`
  to gain access to {command}`git send-email` for instance.
  
  • programs.git.settings
    Type: attribute set of attribute set of (string or boolean or signed integer or list of (string or boolean or signed integer) or attribute set of (string or boolean or signed integer or list of (string or boolean or signed integer)))
    Configuration written to {file}`$XDG_CONFIG_HOME/git/config`.
  See {manpage}`git-config(1)` for details.
  
  • programs.git.signing.format
    Type: null or one of "openpgp", "ssh", "x509"
    The signing method to use when signing commits and tags.
  Valid values are `openpgp` (OpenPGP/GnuPG), `ssh` (SSH), and...
  
  • programs.git.signing.key
    Type: null or string
    The default signing key fingerprint.
  
  Set to `null` to let the signer decide what signing key
  to use depending on com...
  
  • programs.git.signing.signByDefault
    Type: null or boolean
    Whether commits and tags should be signed by default.
  
  • programs.git.signing.signer
    Type: null or string
    Path to signer binary to use.
  '''
# ---
# name: test_show_option_details_nixos_leaf[asyncio]
  '''
  Option: time.timeZone
  Type: null or string without spaces
  Description: The time zone used when displaying times and dates. See  https://en.wikipedia.org/wiki/List_of_tz_database_time_zones 
  for a comprehensive list of possible values for this setting. 
   If null, the timezone will default to UTC and can be set imperatively
  using timedatectl.
  Default: null
  Example: "America/New_York"
  Reference: https://github.com/NixOS/nixpkgs/blob/nixos-25.11/nixos/modules/config/locale.nix (103 lines, use read_option_declaration to read)
  '''
# ---
# name: test_show_option_details_nixos_prefix[asyncio]
  '''
  'time' has 2 child options:
  • time.hardwareClockInLocalTime
    Type: boolean
    If set, keep the hardware clock in local time instead of UTC.
  
  • time.timeZone
    Type: null or string without spaces
    The time zone used when displaying times and dates. See  https://en.wikipedia.org/wiki/List_of_tz_database_time_zones...
  '''
# ---
# name: test_show_option_details_nixvim[asyncio]
  '''
  Option: colorscheme
  Type: null or string
  Description: The name of the colorscheme to use
  Default: null
  Reference: https://github.com/nix-community/nixvim/blob/main/modules/colorscheme.nix (17 lines, use read_option_declaration to read)
  '''
# ---
# name: test_show_option_details_with_reference[asyncio]
  '''
  Option: time.timeZone
  Type: null or string without spaces
  Description: The time zone used when displaying times and dates. See  https://en.wikipedia.org/wiki/List_of_tz_database_time_zones 
  for a comprehensive list of possible values for this setting. 
   If null, the timezone will default to UTC and can be set imperatively
  using timedatectl.
  Default: null
  Example: "America/New_York"
  Reference: https://github.com/NixOS/nixpkgs/blob/nixos-25.11/nixos/modules/config/locale.nix (103 lines, use read_option_declaration to read)
  '''
# ---
# name: test_version_fallback[asyncio]
  '''
  Note: Version '99.99' not found, using 'unstable' instead.
  
  Found 1 options:
  • time.timeZone
    Type: null or string without spaces
    The time zone used when displaying times and dates. See  https://en.wikipedia.org/wiki/List_of_tz_database_time_zones...
  '''
# ---
